Postgresql database has been seeded with prior movie data

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -29,7 +29,7 @@
             <a class="navbar-item" href="/about">About</a>
           </div>
           <div class="navbar-menu navbar-end">
-            <a class="navbar-item" href="">Movies</a>
+            <a class="navbar-item" href="{% url 'movies' %}">Movies</a>
           </div>
         </nav>
     <div class="container">
