--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -7,3 +7,27 @@ body {
 h1, h2, h3 {
     color: #ffffff;
 }
+
+.title {
+    color: #ffffff;
+  }
+  
+  .gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  
+  .gallery .card {
+    max-width: 200px;
+    /* max-width: 30%; */
+    transition: 0.1s linear;
+  }
+  
+  .gallery .card:hover {
+    transform: scale(1.3);
+  }
+  
+  p {
+    font-size: 12px;
+  }
