--- a/main_app/templates/movie_list.html
+++ b/main_app/templates/movie_list.html
@@ -1,6 +1,25 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Movies Page</h1>
+
+<h1 class="title">My Favorite Fantasy Movies</h1>
+
+<div class="gallery">
+
+{% for movie in movies%}
+<a href="">
+    <div class="card">
+        <div class="card-image">
+           <figure class="image is-200x200">
+                <img src="{{movie.imgurl}}" alt="{{movie.title}}">
+           </figure>
+        </div>
+        <div class="card-header">
+            <p class="card-header-title">{{movie.title}}</p>
+        </div>
+    </div>
+</a>
+{%endfor%}
+</div>
 
 {% endblock %}
